fix pazari layout issues

--- a/web/css/my.css
+++ b/web/css/my.css
@@ -10,19 +10,15 @@ body{
     background-position:right bottom;
     padding-top:20px;
 }
-p.extrainfo{
 
-    font-size:1em;
-
-}
 h1 {
     font-size:2em;
-background-color:#506100;
-color:white;
-padding: 10px 30px;
-float:left;
-margin-bottom:20px;
-border-radius:5px;
+    background-color:#506100;
+    color:white;
+    padding: 10px 30px;
+    float:left;
+    margin-bottom:20px;
+    border-radius:5px;
 }
 
 .listing,.sidebar {
@@ -149,10 +145,10 @@ border-radius:5px;
     max-width:none;
 }
 .details img.product{
-    float:left;
+/*    float:left;*/
     border:solid 1px #ddd;
     width:152px;
-    height:152px;
+/*    height:152px;*/
     margin-right:20px;
     margin-bottom:20px;
 }
@@ -164,6 +160,32 @@ border-radius:5px;
     margin-top:10px;
     margin-right:20px;
 
+}
+div.groupinfo{
+    float:left;
+}
+
+dl.extrainfo {
+    display:block;
+    float:left;
+    margin-left:0px;
+}
+
+dl.extrainfo dt {
+    font-family:"Comfortaa", sans-serif;
+    font-weight:normal;
+    line-height:1.5em;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    border-radius:10px;
+    font-weight:normal;
+    text-decoration:underline;
+}
+
+dl.extrainfo dd {
+    font-weight:bold;
+    margin-bottom:10px;
+    line-height:1.5em;
 }
 
 dl.info {
@@ -179,7 +201,8 @@ dl.info dt {
     font-weight:normal;
     line-height:1.5em;
     border-radius:10px;
-    font-weight:bold;
+    font-weight:normal;
+    text-decoration:underline;
 
 }
 
@@ -259,6 +282,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .btn-large {
+    margin-bottom:10px;
     font-size:1.25em;
     background-color: hsl(77, 58%, 35%) !important;
     background-repeat: repeat-x;
